--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ rel="stylesheet" href="normalize.css"> <link rel="stylesheet" href="style.css">
     <a href="http://bl.ocks.org/MattWoelk/5196687">a simplified demo</a> [<a
     href="http://mattwoelk.ca/thesis/demo">alternative link</a>].</p> 
 
-    <p>I've also just finished working on <a
+    <p>I've also just finished working on a <a
         href="http://bl.ocks.org/MattWoelk/5687467">morphogenesis
         simulation</a> [<a href="http://www.mattwoelk.ca/ABM/morphogenesis.html">alternative link</a>] for a course in Agent Based Modelling. You can read <a
         href="http://mattwoelk.ca/ABM/Morphogenesis_Paper.pdf">a paper</a> about
