Borrowing stylesheet from resume page.

--- a/index.html
+++ b/index.html
@@ -1,32 +1,44 @@
-<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <link
-rel="stylesheet" href="normalize.css"> <link rel="stylesheet" href="style.css">
+<!DOCTYPE html>
+<head>
+<meta charset="UTF-8">
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="resume/style.css">
 <!--[if lt IE 9]>
     <script src="dist/html5shiv.js"></script> <![endif]-->
 <title>MattWoelk.ca</title> </head>
 
-<body id="body"> <h1>Hello,</h1> <section class="content">My name is Matthew
+<body id="body">
+
+<header>
+    <h1>Matthew Woelk, <span>EIT</span></h1>
+
+    <ul id="links">
+        <li class="phone"><a href="tel:+2047911380">(204) 791-1380<i class="fa fa-phone"></i></a></li>
+        <li class="email"><a href="mailto:matt@mattwoelk.ca">matt@mattwoelk.ca<i class="fa fa-envelope-o"></i></a></li>
+        <li class="website"><a href="http://mattwoelk.ca">mattwoelk.ca<i class="fa fa-globe"></i></a></li>
+        <li class="github"><a href="http://github.com/MattWoelk">MattWoelk<i class="fa fa-github"></i></a></li>
+        <li class="twitter"><a href="http://twitter.com/MattWoelk">MattWoelk<i class="fa fa-twitter"></i></a></li>
+    </ul>
+
+    <p>Seeking a challenging full-time job to hone skills in a production environment.</p>
+</header>
+
+<section class="content">My name is Matthew
     Woelk. I am a Computer Engineering Masters student currently living in
     Winnipeg, Canada, and I am looking for work as an Engineer In Training.
 
-    <p>My <a href="http://www.mattwoelk.ca/thesis">ongoing thesis project</a>
-    is related to data visualization using web technologies, and it's being
-    used to make Structural Health Monitoring data easy to work with. Here is
-    <a href="http://bl.ocks.org/MattWoelk/5196687">a simplified demo</a> [<a
-    href="http://mattwoelk.ca/thesis/demo">alternative link</a>].</p> 
+    <p>My <a href="http://www.mattwoelk.ca/thesis">ongoing thesis project<i class="fa fa-globe"></i></a> is related to data visualization using web technologies, and it's being used to make Structural Health Monitoring data easy to work with. Here is <a href="http://bl.ocks.org/MattWoelk/5196687">a simplified demo<i class="fa fa-globe"></i></a> (<a href="http://mattwoelk.ca/thesis/demo">alternative link<i class="fa fa-globe"></i></a>).</p>
 
-    <p>I've also just finished working on a <a
-        href="http://bl.ocks.org/MattWoelk/5687467">morphogenesis
-        simulation</a> [<a href="http://www.mattwoelk.ca/ABM/morphogenesis.html">alternative link</a>] for a course in Agent Based Modelling. You can read <a
-        href="http://mattwoelk.ca/ABM/Morphogenesis_Paper.pdf">a paper</a> about
-    it.</p>
+    <p>I've also just finished working on a <a href="http://bl.ocks.org/MattWoelk/5687467">morphogenesis simulation<i class="fa fa-globe"></i></a> (<a href="http://www.mattwoelk.ca/ABM/morphogenesis.html">alternative link<i class="fa fa-globe"></i></a>) for a course in Agent Based Modelling. You can read <a href="http://mattwoelk.ca/ABM/Morphogenesis_Paper.pdf">a paper<i class="fa fa-file-o"></i></a> about it.</p>
 
-    <p>I ran a <a href="http://mattwoelk.ca/git-workshop/">workshop on using
-        git</a> which was recorded as a screencast. It includes a helpful
-    list of commands for using git, with detailed explanations. This was done as part of my duties as the <a href="http://umsats.ca">UMSATS</a> satellite team's Team Lead Internal
+    <p>I ran a <a href="http://mattwoelk.ca/git-workshop/">workshop on using git<i class="fa fa-globe"></i></a> which was recorded as a screencast. It includes a helpful list of commands for using git, with detailed explanations. This was done as part of my duties as the <a href="http://umsats.ca">UMSATS<i class="fa fa-globe"></i></a> satellite team's Team Lead Internal
 
-    <p>My final year design project was building an Artificial Intelligence
-    strategy for a simulated soccer team. Fell free to read the <a href = "http://www.mattwoelk.ca/school/ThesisMatthewWoelk.pdf">large, detailed report</a>.</p>
+    <p>My final year design project was building an Artificial Intelligence strategy for a simulated soccer team. Feel free to read the <a href = "http://www.mattwoelk.ca/school/ThesisMatthewWoelk.pdf">large, detailed report<i class="fa fa-file-o"></i></a>.</p>
 
-    <p>Contact me any time at <a href =
-        "mailto:matt@mattwoelk.ca">matt@mattwoelk.ca</a>, <a href="http://twitter.com/MattWoelk">on twitter</a> or <a href = "http://www.mattwoelk.ca/school/CVMatthewWoelk.pdf">browse my CV</a>.</p></section>
-</body> </html>
+    <p>I also now have a <a href="http://mattwoelk.whipups.com">blog<i class="fa fa-globe"></i></a> and a <a href="http://mattwoelk.ca/resume">very nice resume<i class="fa fa-globe"></i></a>.</p>
+
+</section>
+
+</body>
+</html>
