index, robots import.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
 <link rel="stylesheet" href="resume/style.css">
 <!--[if lt IE 9]>
     <script src="dist/html5shiv.js"></script> <![endif]-->
-<title>MattWoelk.ca</title> </head>
+    <title>MattWoelk.ca</title>
+    <script>
+	    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	    ga('create', 'UA-60941423-1', 'auto');
+	    ga('send', 'pageview');
+
+    </script>
+
+</head>
 
 <body id="body">
 
@@ -21,25 +33,24 @@
         <li class="github"><a href="http://github.com/MattWoelk">MattWoelk<i class="fa fa-github"></i></a></li>
         <li class="twitter"><a href="http://twitter.com/MattWoelk">MattWoelk<i class="fa fa-twitter"></i></a></li>
     </ul>
-
-    <p>Seeking a challenging full-time job to hone skills in a production environment.</p>
+    <p>My name is Matthew Woelk. I am a Computer Engineer from Winnipeg, Canada working for <a href="http://tenable.com">Tenable Network Security<i class="fa fa-globe"></i></a></p>
 </header>
 
-<section class="content">My name is Matthew
-    Woelk. I am a Computer Engineering Masters student currently living in
-    Winnipeg, Canada, and I am looking for work as an Engineer In Training.
+<section class="content">
 
-    <p>My <a href="http://www.mattwoelk.ca/thesis">ongoing thesis project<i class="fa fa-globe"></i></a> is related to data visualization using web technologies, and it's being used to make Structural Health Monitoring data easy to work with. Here is <a href="http://bl.ocks.org/MattWoelk/5196687">a simplified demo<i class="fa fa-globe"></i></a> (<a href="http://mattwoelk.ca/thesis/demo">alternative link<i class="fa fa-globe"></i></a>).</p>
+<p>My <a href="http://youtu.be/EaIYcongb-s">masters thesis project<i class="fa fa-youtube-play"></i></a> (<a href="http://www.mattwoelk.ca/thesis/paper.pdf">paper<i class="fa fa-file-o"></i></a>) is related to data visualization using web technologies, and its goal is to make Structural Health Monitoring data easy to work with. Here is <a href="http://bl.ocks.org/MattWoelk/5196687">a simplified demo<i class="fa fa-globe"></i></a> (<a href="http://mattwoelk.ca/thesis/demo">alternative link<i class="fa fa-globe"></i></a>).</p>
 
-    <p>I've also just finished working on a <a href="http://bl.ocks.org/MattWoelk/5687467">morphogenesis simulation<i class="fa fa-globe"></i></a> (<a href="http://www.mattwoelk.ca/ABM/morphogenesis.html">alternative link<i class="fa fa-globe"></i></a>) for a course in Agent Based Modelling. You can read <a href="http://mattwoelk.ca/ABM/Morphogenesis_Paper.pdf">a paper<i class="fa fa-file-o"></i></a> about it.</p>
+    <p>My undergraduate final year design project was building an Artificial Intelligence strategy for a simulated soccer team. Feel free to read the <a href = "http://www.mattwoelk.ca/school/ThesisMatthewWoelk.pdf">large, detailed report<i class="fa fa-file-o"></i></a>.</p>
 
-    <p>I ran a <a href="http://mattwoelk.ca/git-workshop/">workshop on using git<i class="fa fa-globe"></i></a> which was recorded as a screencast. It includes a helpful list of commands for using git, with detailed explanations. This was done as part of my duties as the <a href="http://umsats.ca">UMSATS<i class="fa fa-globe"></i></a> satellite team's Team Lead Internal
+    <p>I've also written a <a href="http://bl.ocks.org/MattWoelk/5687467">morphogenesis simulator<i class="fa fa-globe"></i></a> (<a href="http://www.mattwoelk.ca/ABM/morphogenesis.html">alternative link<i class="fa fa-globe"></i></a>) (<a href="http://mattwoelk.ca/ABM/Morphogenesis_Paper.pdf">paper<i class="fa fa-file-o"></i></a>) for a course in Agent Based Modelling.</p>
 
-    <p>My final year design project was building an Artificial Intelligence strategy for a simulated soccer team. Feel free to read the <a href = "http://www.mattwoelk.ca/school/ThesisMatthewWoelk.pdf">large, detailed report<i class="fa fa-file-o"></i></a>.</p>
+    <p>I ran a <a href="http://mattwoelk.ca/git-workshop/">workshop on using git<i class="fa fa-globe"></i></a> which was recorded as a screencast. It includes a helpful list of commands for using git, with detailed explanations. This was done as part of my duties as the <a href="http://umsats.ca">UMSATS<i class="fa fa-globe"></i></a> satellite team's Team Lead Internal.
 
-    <p>I also now have a <a href="http://mattwoelk.whipups.com">blog<i class="fa fa-globe"></i></a> and a <a href="http://mattwoelk.ca/resume">very nice resume<i class="fa fa-globe"></i></a>.</p>
+    <p>I also have a small <a href="http://mattwoelk.whipups.com">blog<i class="fa fa-globe"></i></a>.</p>
 
 </section>
+
+<footer>Font Icons from <a href="http://fontawesome.io">Font Awesome.</a></footer>
 
 </body>
 </html>
