fix globe icon.

--- a/resume/index.html
+++ b/resume/index.html
@@ -42,7 +42,7 @@
             <h1>Nessus Compliance Engineer</h1>
             <ul>
                 <li>Working with a small team to write code to automate the auditing of a variety of devices and services.</li>
-                <li>Re-implemented the <a href="http://stedolan.github.io/jq/">jq</a> language in our in-house language.</li>
+                <li>Re-implemented the <a href="http://stedolan.github.io/jq/">jq<i class="fa fa-globe"></i></a> language in our in-house language.</li>
                 <li>Helped introduce good coding practices like Test Driven Development, functional programming, and Clean Code.</li>
                 <li>Wrote 2 major projects in Python to organize our system.</li>
             </ul>
