Added itch.io page.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li class="website"><a href="http://mattwoelk.ca">mattwoelk.ca<i class="fa fa-globe"></i></a></li>
         <li class="github"><a href="http://github.com/MattWoelk">MattWoelk<i class="fa fa-github"></i></a></li>
         <li class="twitter"><a href="http://twitter.com/MattWoelk">MattWoelk<i class="fa fa-twitter"></i></a></li>
+        <li class="twitter"><a href="https://mattwoelk.itch.io">itch.io<i class="fa fa-gamepad"></i></a></li>
     </ul>
     <p>My name is Matthew Woelk. I am a Computer Engineer from Winnipeg, Canada working for <a href="http://tenable.com">Tenable Network Security<i class="fa fa-globe"></i></a></p>
 </header>
