--- a/index.html
+++ b/index.html
@@ -34,12 +34,26 @@
         <li class="twitter"><a href="http://twitter.com/MattWoelk">MattWoelk<i class="fa fa-twitter"></i></a></li>
         <li class="twitter"><a href="https://mattwoelk.itch.io">itch.io<i class="fa fa-gamepad"></i></a></li>
     </ul>
-    <p>My name is Matthew Woelk. I am a Computer Engineer from Winnipeg, Canada working for <a href="http://tenable.com">Tenable Network Security<i class="fa fa-globe"></i></a></p>
+    <p>My name is Matthew Woelk. I am a Computer Engineer from Winnipeg, Canada working for <a href="https://electricmonkmedia.com/">ElectricMonkMedia<i class="fa fa-globe"></i></a></p>
 </header>
 
 <section class="content">
 
-<p>My <a href="http://youtu.be/EaIYcongb-s">masters thesis project<i class="fa fa-youtube-play"></i></a> (<a href="http://www.mattwoelk.ca/thesis/paper.pdf">paper<i class="fa fa-file-o"></i></a>) is related to data visualization using web technologies, and its goal is to make Structural Health Monitoring data easy to work with. Here is <a href="http://bl.ocks.org/MattWoelk/5196687">a simplified demo<i class="fa fa-globe"></i></a> (<a href="http://mattwoelk.ca/thesis/demo">alternative link<i class="fa fa-globe"></i></a>).</p>
+	<h3>Video Games</h3>
+	<p>I make video games! You can find them all at <a href="http://spacewagon.games">spacewagon.games</a>, but here are some highlithgs:</p>
+	
+	<p><a href="https://mattwoelk.itch.io/propaganda-llama">Propaganda Llama</a> is a one-button game about spreading propaganda to the llama masses. Sign up for the mailing list <a href="http://eepurl.com/cpFSPj">here</a>.</p>
+
+	<p><a href="https://mattwoelk.itch.io/dj-hamstarz">DJ Hamstarz: Aspiring Mix-Lord</a> was made in one weekend, and is a music-sync'd vertical shooter.</p>
+
+	<p>I also talk about games and <a href="https://twitter.com/i/moments/935242078187028480">how</a> to <a href="https://twitter.com/i/moments/880609790300389377">make</a> them on <a href="https://twitter.com/MattWoelk">twitter</a>. Come say hi. :)</p>
+
+	<h3>Board Games</h3>
+	<p>I run a <a href="http://youtube.com/gamesexplained">YouTube channel</a> and <a href="https://anchor.fm/games-explained">podcast</a> called Games Explained, where we succinctly explain how to play certain board games, and talk about games in general.</p>
+
+	<h3>Older Things</h3>
+
+<p>My <a href="http://youtu.be/EaIYcongb-s">masters thesis project<i class="fa fa-youtube-play"></i></a> (<a href="http://www.mattwoelk.ca/thesis/paper.pdf">paper<i class="fa fa-file-o"></i></a>) was related to data visualization using web technologies, and its goal was to make Structural Health Monitoring data easy to work with. Here is <a href="http://bl.ocks.org/MattWoelk/5196687">a simplified demo<i class="fa fa-globe"></i></a> (<a href="http://mattwoelk.ca/thesis/demo">alternative link<i class="fa fa-globe"></i></a>).</p>
 
     <p>My undergraduate final year design project was building an Artificial Intelligence strategy for a simulated soccer team. Feel free to read the <a href = "http://www.mattwoelk.ca/school/ThesisMatthewWoelk.pdf">large, detailed report<i class="fa fa-file-o"></i></a>.</p>
 
