icons and spelling mistake

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 <section class="content">
 
 	<h3>Video Games</h3>
-	<p>I make video games! You can find them all at <a href="http://spacewagon.games">spacewagon.games</a>, but here are some highlithgs:</p>
+	<p>I make video games! You can find them all at <a href="http://spacewagon.games">spacewagon.games<i class="fa fa-globe"></i></a>, but here are some highlights:</p>
 	
-	<p><a href="https://mattwoelk.itch.io/propaganda-llama">Propaganda Llama</a> is a one-button game about spreading propaganda to the llama masses. Sign up for the mailing list <a href="http://eepurl.com/cpFSPj">here</a>.</p>
+	<p><a href="https://mattwoelk.itch.io/propaganda-llama">Propaganda Llama<i class="fa fa-gamepad"></i></a> (scheduled to be released later this year) is a one-button game about spreading propaganda to the llama masses. Sign up for the mailing list and to be a playtester <a href="http://eepurl.com/cpFSPj">here<i class="far fa-envelope"></i></a>.</p>
 
-	<p><a href="https://mattwoelk.itch.io/dj-hamstarz">DJ Hamstarz: Aspiring Mix-Lord</a> was made in one weekend, and is a music-sync'd vertical shooter.</p>
+	<p><a href="https://mattwoelk.itch.io/dj-hamstarz">DJ Hamstarz: Aspiring Mix-Lord<i class="fa fa-gamepad"></i></a> was made in one weekend, and is a music-sync'd vertical shooter.</p>
 
-	<p>I also talk about games and <a href="https://twitter.com/i/moments/935242078187028480">how</a> to <a href="https://twitter.com/i/moments/880609790300389377">make</a> them on <a href="https://twitter.com/MattWoelk">twitter</a>. Come say hi. :)</p>
+	<p>I also talk about games and <a href="https://twitter.com/i/moments/935242078187028480">how</a> to <a href="https://twitter.com/i/moments/880609790300389377">make</a> them on <a href="https://twitter.com/MattWoelk">twitter<i class="fa fa-twitter"></i></a>. Come say hi. :)</p>
 
 	<h3>Board Games</h3>
-	<p>I run a <a href="http://youtube.com/gamesexplained">YouTube channel</a> and <a href="https://anchor.fm/games-explained">podcast</a> called Games Explained, where we succinctly explain how to play certain board games, and talk about games in general.</p>
+	<p>I run a <a href="http://youtube.com/gamesexplained">YouTube channel<i class="fa fa-youtube-play"></i></a> and <a href="https://anchor.fm/games-explained">podcast<i class="fas fa-podcast"></i></a> called Games Explained, where we succinctly explain how to play certain board games, and talk about games in general.</p>
 
 	<h3>Older Things</h3>
 
