icon fixes for new version

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<!--<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">-->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="resume/style.css">
 <!--[if lt IE 9]>
@@ -28,10 +29,10 @@
 
     <ul id="links">
         <li class="phone"><a href="tel:+12047911380">(204) 791-1380<i class="fa fa-phone"></i></a></li>
-        <li class="email"><a href="mailto:matt@mattwoelk.ca">matt@mattwoelk.ca<i class="fa fa-envelope-o"></i></a></li>
+        <li class="email"><a href="mailto:matt@mattwoelk.ca">matt@mattwoelk.ca<i class="far fa-envelope"></i></a></li>
         <li class="website"><a href="http://mattwoelk.ca">mattwoelk.ca<i class="fa fa-globe"></i></a></li>
-        <li class="github"><a href="http://github.com/MattWoelk">MattWoelk<i class="fa fa-github"></i></a></li>
-        <li class="twitter"><a href="http://twitter.com/MattWoelk">MattWoelk<i class="fa fa-twitter"></i></a></li>
+        <li class="github"><a href="http://github.com/MattWoelk">MattWoelk<i class="fab fa-github"></i></a></li>
+        <li class="twitter"><a href="http://twitter.com/MattWoelk">MattWoelk<i class="fab fa-twitter"></i></a></li>
         <li class="twitter"><a href="https://mattwoelk.itch.io">itch.io<i class="fa fa-gamepad"></i></a></li>
     </ul>
     <p>My name is Matthew Woelk. I am a Computer Engineer from Winnipeg, Canada working for <a href="https://electricmonkmedia.com/">ElectricMonkMedia<i class="fa fa-globe"></i></a></p>
@@ -46,18 +47,18 @@
 
 	<p><a href="https://mattwoelk.itch.io/dj-hamstarz">DJ Hamstarz: Aspiring Mix-Lord<i class="fa fa-gamepad"></i></a> was made in one weekend, and is a music-sync'd vertical shooter.</p>
 
-	<p>I also talk about games and <a href="https://twitter.com/i/moments/935242078187028480">how</a> to <a href="https://twitter.com/i/moments/880609790300389377">make</a> them on <a href="https://twitter.com/MattWoelk">twitter<i class="fa fa-twitter"></i></a>. Come say hi. :)</p>
+	<p>I also talk about games and <a href="https://twitter.com/i/moments/935242078187028480">how</a> to <a href="https://twitter.com/i/moments/880609790300389377">make</a> them on <a href="https://twitter.com/MattWoelk">twitter<i class="fab fa-twitter"></i></a>. Come say hi. :)</p>
 
 	<h3>Board Games</h3>
-	<p>I run a <a href="http://youtube.com/gamesexplained">YouTube channel<i class="fa fa-youtube-play"></i></a> and <a href="https://anchor.fm/games-explained">podcast<i class="fas fa-podcast"></i></a> called Games Explained, where we succinctly explain how to play certain board games, and talk about games in general.</p>
+	<p>I run a <a href="http://youtube.com/gamesexplained">YouTube channel<i class="fab fa-youtube"></i></a> and <a href="https://anchor.fm/games-explained">podcast<i class="fas fa-podcast"></i></a> called Games Explained, where we succinctly explain how to play certain board games, and talk about games in general.</p>
 
 	<h3>Older Things</h3>
 
-<p>My <a href="http://youtu.be/EaIYcongb-s">masters thesis project<i class="fa fa-youtube-play"></i></a> (<a href="http://www.mattwoelk.ca/thesis/paper.pdf">paper<i class="fa fa-file-o"></i></a>) was related to data visualization using web technologies, and its goal was to make Structural Health Monitoring data easy to work with. Here is <a href="http://bl.ocks.org/MattWoelk/5196687">a simplified demo<i class="fa fa-globe"></i></a> (<a href="http://mattwoelk.ca/thesis/demo">alternative link<i class="fa fa-globe"></i></a>).</p>
+<p>My <a href="http://youtu.be/EaIYcongb-s">masters thesis project<i class="fab fa-youtube"></i></a> (<a href="http://www.mattwoelk.ca/thesis/paper.pdf">paper<i class="far fa-file-pdf"></i></a>) was related to data visualization using web technologies, and its goal was to make Structural Health Monitoring data easy to work with. Here is <a href="http://bl.ocks.org/MattWoelk/5196687">a simplified demo<i class="fa fa-globe"></i></a> (<a href="http://mattwoelk.ca/thesis/demo">alternative link<i class="fa fa-globe"></i></a>).</p>
 
-    <p>My undergraduate final year design project was building an Artificial Intelligence strategy for a simulated soccer team. Feel free to read the <a href = "http://www.mattwoelk.ca/school/ThesisMatthewWoelk.pdf">large, detailed report<i class="fa fa-file-o"></i></a>.</p>
+    <p>My undergraduate final year design project was building an Artificial Intelligence strategy for a simulated soccer team. Feel free to read the <a href = "http://www.mattwoelk.ca/school/ThesisMatthewWoelk.pdf">large, detailed report<i class="far fa-file-pdf"></i></a>.</p>
 
-    <p>I've also written a <a href="http://bl.ocks.org/MattWoelk/5687467">morphogenesis simulator<i class="fa fa-globe"></i></a> (<a href="http://www.mattwoelk.ca/ABM/morphogenesis.html">alternative link<i class="fa fa-globe"></i></a>) (<a href="http://mattwoelk.ca/ABM/Morphogenesis_Paper.pdf">paper<i class="fa fa-file-o"></i></a>) for a course in Agent Based Modelling.</p>
+    <p>I've also written a <a href="http://bl.ocks.org/MattWoelk/5687467">morphogenesis simulator<i class="fa fa-globe"></i></a> (<a href="http://www.mattwoelk.ca/ABM/morphogenesis.html">alternative link<i class="fa fa-globe"></i></a>) (<a href="http://mattwoelk.ca/ABM/Morphogenesis_Paper.pdf">paper<i class="far fa-file-pdf"></i></a>) for a course in Agent Based Modelling.</p>
 
     <p>I ran a <a href="http://mattwoelk.ca/git-workshop/">workshop on using git<i class="fa fa-globe"></i></a> which was recorded as a screencast. It includes a helpful list of commands for using git, with detailed explanations. This was done as part of my duties as the <a href="http://umsats.ca">UMSATS<i class="fa fa-globe"></i></a> satellite team's Team Lead Internal.
 
